Add comprehensive functionalities on backend